Section heading contrast fixed

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -5,7 +5,7 @@
 }
 
  h3 {
-	color: #ff1500;
+	color: #064ac5;
 } 
 
 p {
